# file-encriptor

./: CMakeLists.txt  README.md
src/: FileEncryptor.cpp  FileEncryptor.hpp  KeyManager.cpp  KeyManager.hpp  main.cpp
